--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -33,4 +33,14 @@
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:textSize="16sp"/>
+
+    <Button
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Do something"
+      android:id="@+id/temp_button"
+      android:layout_marginTop="90dp"
+      android:layout_below="@+id/textView"
+      android:layout_alignParentStart="true"/>
+
 </LinearLayout>
