--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -43,4 +43,14 @@
       android:layout_below="@+id/textView"
       android:layout_alignParentStart="true"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Do something"
+        android:id="@+id/temp_button_2"
+        android:layout_marginTop="90dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"/>
+
+
 </LinearLayout>
