--- a/app/src/main/res/layout/fragment_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_profile_setup.xml
@@ -2,11 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.launch.twinkle.twinkle.ProfileSetupFragment">
-
+<!--
     <ImageView
         android:id="@+id/userPicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="profilepic"/>
-
+-->
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:stretchMode="columnWidth"
+        android:numColumns="2" />
 </FrameLayout>
