Check and uncheck profiles

--- a/app/src/main/res/layout/fragment_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_profile_setup.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.launch.twinkle.twinkle.ProfileSetupFragment">
-<!--
-    <ImageView
-        android:id="@+id/userPicture"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/loading_panel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="profilepic"/>
--->
+        android:indeterminate="true"
+        android:layout_gravity="center"/>
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
