Check and uncheck profiles

--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -58,6 +58,10 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width=""
+        android:layout_height="">
+        </RelativeLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
