matching landing page #2

--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -1,10 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.launch.twinkle.twinkle.MatchFragment"
+    android:background="#D8D8D8"
     android:orientation="vertical"
-    android:background="#F8F8F8">
+    tools:context="com.launch.twinkle.twinkle.MatchFragment">
 
     <ImageView
         android:id="@+id/match_picture"
@@ -14,9 +15,9 @@
         android:scaleType="centerCrop"
         android:src="@drawable/profile_test" />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="70dp"
         android:layout_marginTop="180dp"
         android:background="#FFFFFF">
 
@@ -24,98 +25,116 @@
             android:id="@+id/match_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
             android:text="Emily K."
             android:textColor="#000000"
-            android:textSize="28dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="10dp"/>
+            android:textSize="28dp" />
+
         <TextView
             android:id="@+id/match_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:paddingRight="15dp"
+            android:paddingTop="22dp"
             android:text="24 yrs old"
             android:textColor="#B8B8B8"
-            android:textSize="18dp"
+            android:textSize="18dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="270dp">
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="80dp"
             android:paddingRight="15dp"
-            android:paddingTop="17dp"/>
-        <RelativeLayout
+            android:paddingTop="15dp">
+
+            <TextView
+                android:id="@+id/match_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:background="#FFFFFF"
+                android:paddingLeft="15dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:text="Ian, she seems like a really nice girl. You definitely should at least go out for a cup of tea ..."
+                android:textColor="#000000"
+                android:textSize="18dp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp">
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="See Full Profile"
-            android:background="@color/primary"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"/>
-        </RelativeLayout>
+            android:paddingTop="15dp">
+
+            <com.launch.twinkle.twinkle.CircleImageView
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:src="@drawable/profile_test" />
+        </LinearLayout>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="290dp">
-        <TextView
-            android:id="@+id/match_age"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_alignParentRight="true"
-            android:text="Ian, she seems like a really nice girl. You definitely should at least go out for a cup of tea ..."
-            android:textColor="#B8B8B8"
-            android:textSize="18dp"
-            android:paddingTop="17dp"
-            android:background="#FFFFFF"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"/>
+        android:paddingBottom="70dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="15dp">
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="7 More Thoughts in your Circle"
+            android:layout_alignParentBottom="true"
             android:background="@color/primary"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"/>
+            android:text="12 more messages"
+            android:textAllCaps="false"
+            android:textSize="18dp" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        >
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:weightSum="2">
-        <Button
-            android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="No"
-            android:textSize="20dp"
-            android:background="#B8B8B8"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"
-            android:layout_weight="1"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yes"
-            android:textSize="20dp"
-            android:background="#E91E63"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:weightSum="2">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#B8B8B8"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="No"
+                android:textAllCaps="false"
+                android:textSize="20dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#E91E63"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="Yes"
+                android:textAllCaps="false"
+                android:textSize="20dp" />
+        </LinearLayout>
     </RelativeLayout>
 
-</FrameLayout>
+</FrameLayout><!--
+
+        -->
