--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -1,19 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:id="@+id/chat_message">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:orientation="horizontal">
-
-  <TextView
-    android:id="@+id/author"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-
-  <TextView
-    android:id="@+id/message"
+  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp" />
+    android:paddingLeft="80dp"
+    android:paddingRight="15dp"
+    android:paddingTop="15dp">
 
-</LinearLayout>
+    <TextView
+      android:id="@+id/message"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="#FFFFFF"
+      android:paddingLeft="15dp"
+      android:paddingRight="5dp"
+      android:paddingTop="5dp"
+      android:minHeight="75dp"
+      android:text="Ian, she seems like a really nice girl. You definitely should at least go out for a cup of tea ..."
+      android:textColor="#000000"
+      android:textSize="18dp" />
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="15dp"
+    android:paddingTop="15dp">
+
+    <com.launch.twinkle.twinkle.CircleImageView
+      android:layout_width="75dp"
+      android:layout_height="75dp"
+      android:src="@drawable/profile_test" />
+  </LinearLayout>
+</RelativeLayout>
+
