--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -31,6 +31,7 @@
     android:paddingTop="15dp">
 
     <com.launch.twinkle.twinkle.CircleImageView
+      android:id="@+id/profile_picture"
       android:layout_width="75dp"
       android:layout_height="75dp"
       android:src="@drawable/profile_test" />
