--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -75,6 +75,7 @@
     android:weightSum="2">
 
     <Button
+      android:id="@+id/no_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
@@ -86,6 +87,7 @@
       android:textSize="20dp" />
 
     <Button
+      android:id="@+id/yes_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_weight="1"
