--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -52,5 +52,15 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Judy's Pictures"
+        android:id="@+id/temp_button_3"
+        android:layout_marginTop="70dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"/>
+
+
 
 </LinearLayout>
