--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -11,56 +11,66 @@
 
 </FrameLayout>
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/primary">
+
+    <ImageView
+        android:id="@+id/chat_icon"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_gravity="top"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher"
+        android:layout_marginTop="140dp"
+        android:layout_centerHorizontal="true" />
 
     <com.facebook.widget.LoginButton
         android:id="@+id/authButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
         facebook:confirm_logout="false"
-        facebook:fetch_user_info="true" />
+        facebook:fetch_user_info="true"
+        facebook:login_text="Sign Up with Facebook"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/temp_button_2"
+        android:layout_marginBottom="47dp" />
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
+        android:layout_margin="0dp"
         android:textSize="16sp"/>
 
     <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Create chat fragment"
+      android:text="chat"
       android:id="@+id/temp_button"
-      android:layout_marginTop="90dp"
-      android:layout_below="@+id/textView"
-      android:layout_alignParentStart="true"/>
+        android:layout_below="@+id/temp_button_3"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Judy's Pictures"
+        android:text="Flow to be hook up (see todo in MainFragment)"
         android:id="@+id/temp_button_2"
-        android:layout_marginTop="90dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"/>
+        android:layout_below="@+id/temp_button"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Judy's Pictures"
+        android:text="q"
         android:id="@+id/temp_button_3"
-        android:layout_marginTop="70dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 
 
-</LinearLayout>
+</RelativeLayout>
