--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -28,6 +28,7 @@
     android:layout_width="45dp"
     android:layout_height="45dp"
     android:layout_marginLeft="15dp"
+    android:layout_alignEnd="@id/message"
     android:layout_centerVertical="true"/>
 
 </RelativeLayout>
