--- a/app/src/main/res/layout/chat_preview.xml
+++ b/app/src/main/res/layout/chat_preview.xml
@@ -3,7 +3,8 @@
   android:layout_height="wrap_content"
   android:paddingTop="10dp"
   android:paddingBottom="10dp"
-  android:id="@+id/chat_message">
+  android:id="@+id/chat_message"
+  android:background="#FFFFFF">
 
   <TextView
     android:id="@+id/message"
@@ -24,16 +25,15 @@
 
 
   <com.launch.twinkle.twinkle.CircleImageView
-    android:id="@+id/initial_profile_picture"
-    android:layout_width="45dp"
-    android:layout_height="45dp"
-    android:layout_marginLeft="15dp"/>
+    android:id="@+id/matched_profile_picture"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_marginLeft="85dp"/>
 
   <com.launch.twinkle.twinkle.CircleImageView
-    android:id="@+id/matched_profile_picture"
-    android:layout_width="45dp"
-    android:layout_height="45dp"
-    android:layout_marginTop="60dp"
+    android:id="@+id/initial_profile_picture"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_marginLeft="15dp"/>
 
 </RelativeLayout>
