--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -12,6 +12,8 @@
     android:background="#FFFFFF"
     android:layout_marginLeft="35dp"
     android:layout_marginRight="5dp"
+      android:layout_marginTop="0dp"
+      android:layout_marginBottom="0dp"
     android:paddingLeft="35dp"
     android:paddingRight="5dp"
     android:paddingTop="10dp"
@@ -22,6 +24,13 @@
     android:layout_centerVertical="true"
     />
 
+  <com.launch.twinkle.twinkle.CircleImageView
+    android:id="@+id/self_profile_picture"
+    android:layout_width="45dp"
+    android:layout_height="45dp"
+    android:layout_marginRight="15dp"
+    android:layout_centerVertical="true"
+    android:layout_alignParentRight="true"/>
 
   <com.launch.twinkle.twinkle.CircleImageView
     android:id="@+id/profile_picture"
