--- a/app/src/main/res/layout/chat_preview.xml
+++ b/app/src/main/res/layout/chat_preview.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:paddingTop="10dp"
-  android:paddingBottom="10dp"
+  android:paddingTop="15dp"
+  android:paddingBottom="15dp"
   android:id="@+id/chat_message"
   android:background="#FFFFFF">
 
@@ -11,30 +11,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:layout_marginLeft="35dp"
+    android:layout_marginLeft="200dp"
     android:layout_marginRight="5dp"
-    android:paddingLeft="35dp"
     android:paddingRight="5dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:minHeight="100dp"
     android:textColor="#000000"
-    android:textSize="18dp"
+    android:textSize="24dp"
     android:layout_centerVertical="true"
     />
 
 
   <com.launch.twinkle.twinkle.CircleImageView
     android:id="@+id/matched_profile_picture"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_marginLeft="85dp"/>
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+    android:layout_marginLeft="85dp"
+    android:layout_centerVertical="true"/>
 
   <com.launch.twinkle.twinkle.CircleImageView
     android:id="@+id/initial_profile_picture"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_marginLeft="15dp"/>
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+    android:layout_marginLeft="15dp"
+    android:layout_centerVertical="true"/>
 
 </RelativeLayout>
 
