--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/chat_icon"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:layout_width="340dp"
+        android:layout_height="300dp"
         android:layout_gravity="top"
         android:src="@drawable/circl_splash_text"
         android:layout_marginTop="80dp"
@@ -52,7 +52,8 @@
       android:text="chat"
       android:id="@+id/temp_button"
         android:layout_below="@+id/temp_button_3"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -60,7 +61,8 @@
         android:text="Flow to be hook up (see todo in MainFragment)"
         android:id="@+id/temp_button_2"
         android:layout_below="@+id/temp_button"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -68,7 +70,8 @@
         android:text="q"
         android:id="@+id/temp_button_3"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible"/>
 
 
 
