--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -11,9 +11,9 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:layout_marginLeft="35dp"
-    android:layout_marginRight="5dp"
-      android:layout_marginTop="0dp"
-      android:layout_marginBottom="0dp"
+    android:layout_marginRight="35dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginBottom="0dp"
     android:paddingLeft="35dp"
     android:paddingRight="5dp"
     android:paddingTop="10dp"
@@ -21,6 +21,7 @@
     android:minHeight="35dp"
     android:textColor="#000000"
     android:textSize="18dp"
+    android:text="test"
     android:layout_centerVertical="true"
     />
 
@@ -37,7 +38,6 @@
     android:layout_width="45dp"
     android:layout_height="45dp"
     android:layout_marginLeft="15dp"
-    android:layout_alignEnd="@id/message"
     android:layout_centerVertical="true"/>
 
 </RelativeLayout>
