--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -62,6 +62,7 @@
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
     android:background="@color/primary"
+    android:textColor="@android:color/white"
     android:textAllCaps="false"
     android:textSize="18dp" />
 
