--- a/app/src/main/res/layout/fragment_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_profile_setup.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:text="Next"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
         android:background="#E91E63"/>
