--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -5,9 +5,9 @@
   android:paddingBottom="10dp"
   android:id="@+id/chat_message">
 
-  <TextView
-    android:id="@+id/message"
-    android:layout_width="match_parent"
+  <RelativeLayout
+    android:id="@+id/message_container"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:layout_marginLeft="35dp"
@@ -18,12 +18,39 @@
     android:paddingRight="5dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:minHeight="35dp"
-    android:textColor="#000000"
-    android:textSize="18dp"
-    android:text="test"
-    android:layout_centerVertical="true"
-    />
+    android:minHeight="35dp">
+    <TextView
+      android:id="@+id/message"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="#000000"
+      android:textSize="18dp"
+      android:text="test"
+      android:paddingBottom="20dp"
+      />
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@id/message">
+      <TextView
+        android:id="@+id/message_sender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#666666"
+        android:textSize="12dp"
+        android:paddingRight="10dp"
+        />
+      <TextView
+        android:id="@+id/message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#666666"
+        android:textSize="12dp"
+        android:text="9:47 AM"
+        android:layout_alignEnd="@id/message_sender"
+        />
+    </LinearLayout>
+  </RelativeLayout>
 
   <com.launch.twinkle.twinkle.CircleImageView
     android:id="@+id/self_profile_picture"
